--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -1,7 +1,7 @@
-<div class="view">
+<div class="views">
   <header-bar></header-bar>
   <awesome-swiper></awesome-swiper>
-  <div>
-    <icons></icons>
-  </div>
+  <icons></icons>
+  <div class="line"></div>
+  <recommend></recommend>
 </div>
