--- a/src/views/home/home.styl
+++ b/src/views/home/home.styl
@@ -1,8 +1,5 @@
  .views
-   background-color #F2F2F2
-   width 750px
-   position fixed
-   left 0
-   right 0
-   top 0
-   flex 1
+   background-color #ffffff
+  .line 
+    height 20px;
+    background: #f5f5f5
