--- a/src/components/recommend/recommend.styl
+++ b/src/components/recommend/recommend.styl
@@ -3,16 +3,15 @@
    margin-left: 24px
    margin-right: 24px
    padding-top: 20px;
- 
    .title
      float left
      height 47px
      line-height: 47px
      width: 100%;
-   
+     font-size: 38px
      .title-icon
-       width: 42px
-       height 42px
+       width: 52px
+       height 52px
      .title-desc
        color: #333333
        padding-left: 3px;
