组件传值 模拟ajax数据请求

--- a/src/components/icons/icons.html
+++ b/src/components/icons/icons.html
@@ -4,10 +4,10 @@
       <div class="icon" v-for='item of page' :key='item.id'>
         <ul>
           <li>
-            <img :src="item.imgurl" alt="" srcset="" class="iconimg">
+            <img :src="item.imgUrl" alt="" srcset="" class="iconimg">
           </li>
           <li>
-            <span class="keywords">{{item.keywords}}</span>
+            <span class="keywords">{{item.desc}}</span>
           </li>
         </ul>
       </div>
