--- a/src/components/recommend/recommend.html
+++ b/src/components/recommend/recommend.html
@@ -7,9 +7,9 @@
     <span class="title-desc">猜你喜欢</span>
   </div>
   <div class="recomend-list">
-    <div class="recomend-item border-bottom" v-for='item of recomendList' :key="item.id">
+    <div class="recomend-item border-bottom" v-for='item of recommendList' :key="item.id">
       <div class="recomend-img">
-        <img class="recomend-img" :src="item.imgurl" alt="" srcset="">
+        <img class="recomend-img" :src="item.imgUrl" alt="" srcset="">
       </div>
       <div class="recomend-info">
         <ul>
