--- a/src/components/weekend/weekend.html
+++ b/src/components/weekend/weekend.html
@@ -3,10 +3,10 @@
   <div class="product-info border-bottom" v-for='item of weekProductList'>
     <ul>
       <li>
-        <img :src="item.imgurl" class="product-img" alt="" srcset="">
+        <img :src="item.imgUrl" class="product-img" alt="" srcset="">
       </li>
       <li class="product-deatil">
-        <p class="product-name">{{item.name}}</p>
+        <p class="product-name">{{item.title}}</p>
         <p class="product-desc">{{item.desc}}</p>
       </li>
     </ul>
