--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -1,8 +1,8 @@
 <div class="views">
-  <header-bar></header-bar>
-  <awesome-swiper></awesome-swiper>
-  <icons></icons>
+  <header-bar :city = 'city'></header-bar>
+  <awesome-swiper :swiperList = 'swiperList'></awesome-swiper>
+  <icons :iconList = 'iconList'></icons>
   <div class="line"></div>
-  <recommend></recommend>
-  <weekend></weekend>
+  <recommend :recommendList = 'recommendList' ></recommend>
+  <weekend :weekProductList = 'weekProductList'></weekend>
 </div>
