--- a/src/components/awesome-swiper/awesome-swiper.html
+++ b/src/components/awesome-swiper/awesome-swiper.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
-    <swiper :options="swiperOption">
+    <swiper :options="swiperOption" v-if="showSwiper">
       <!-- slides -->
-      <swiper-slide v-for='item of swiperList' :key='item.id'><img class="swiper-img" :src="item.imgUrl" alt=""></swiper-slide>
+      <swiper-slide v-for='item of this.swiperList' :key='item.id'><img class="swiper-img" :src="item.imgUrl" alt=""></swiper-slide>
        
       <!-- Optional controls -->
       <div class="swiper-pagination"  slot="pagination"></div>
