--- a/src/components/headerBar/headerBar.html
+++ b/src/components/headerBar/headerBar.html
@@ -3,5 +3,5 @@
      <i class="iconfont icon-back"></i>
    </div>
    <div class="header-search"><i class="iconfont icon-search"></i><span class="placeholder">输入城市/景点游玩主题</span></div>
-   <div class="header-city">城市<i class="iconfont icon-city"></i></div>
+   <div class="header-city">{{this.city}}<i class="iconfont icon-city"></i></div>
 </div>
