--- a/src/components/recommend/recommend.styl
+++ b/src/components/recommend/recommend.styl
@@ -1,4 +1,5 @@
  @import '../../styles/mixins.styl'
+ @import '../../styles/varibles.styl'
  .recomend
    margin-left: 24px
    margin-right: 24px
@@ -30,21 +31,21 @@
          .recomend-info-title
           font-size: 40px
           padding-bottom: 32px
-          color: #212121
+          color: $fontColor
          .recomend-info-desc
           font-size: 22px
           padding-bottom: 32px
-          color: #616161
+          color: $fontDescColor
           max-width: 500px
           ellipsis()
          .recomend-info-price-unt
-          color: #ff8300
+          color: $fontExtrudeColor
          .recomend-info-price
           font-size: 35px
-          color: #ff8300
+          color: $fontExtrudeColor
          .recomend-info-price-unts
            font-size: 24px
-           color: #616161
+           color: $fontDescColor
            padding-left: 3px
          
         
