--- a/src/styles/varibles.styl
+++ b/src/styles/varibles.styl
@@ -1,3 +1,7 @@
 $navBarHeight = 86px
 $darkTextColor= #000000
 $bgColor = #00bcd4
+$fontColor = #212121
+$fontExtrudeColor = #ff8300
+$fontDescColor= #616161
+$white = #ffffff;
