--- a/src/components/home/icons/icons.styl
+++ b/src/components/home/icons/icons.styl
@@ -1,4 +1,4 @@
-@import '../../styles/mixins.styl'
+@import '../../../styles/mixins.styl'
 .icons >>> .swiper-container 
   height 0
   padding-bottom: 40%
