--- a/src/components/home/recommend/recommend.styl
+++ b/src/components/home/recommend/recommend.styl
@@ -1,5 +1,5 @@
- @import '../../styles/mixins.styl'
- @import '../../styles/varibles.styl'
+ @import '../../../styles/mixins.styl'
+ @import '../../../styles/varibles.styl'
  .recomend
    margin-left: 24px
    margin-right: 24px
