--- a/src/components/home/weekend/weekend.styl
+++ b/src/components/home/weekend/weekend.styl
@@ -1,5 +1,5 @@
- @import '../../styles/mixins.styl'
- @import '../../styles/varibles.styl'
+ @import '../../../styles/mixins.styl'
+ @import '../../../styles/varibles.styl'
 .week 
   .weekend-title
     background: #f5f5f5
