--- a/src/views/city/city.html
+++ b/src/views/city/city.html
@@ -1,7 +1,3 @@
-<div class="header">
-
-  <div class="back">
-    <i class="iconfont icon-back"></i>
-  </div>
-
+<div >
+  <header-bar></header-bar>
 </div>
