finish city css

--- a/src/views/city/city.html
+++ b/src/views/city/city.html
@@ -1,4 +1,6 @@
 <div >
   <header-bar></header-bar>
   <search-city></search-city>
+  <list-city></list-city>
+  <alphabet-city></alphabet-city>
 </div>
