--- a/src/components/city/list/list.html
+++ b/src/components/city/list/list.html
@@ -11,41 +11,18 @@
     <div class="area ">
       <div class="title border-topbottom">热门城市</div>
       <div class="button-list">
-        <div class="button-wrapper">
-          <div class="button">青岛</div>
-        </div>
-        <div class="button-wrapper">
-          <div class="button">北京</div>
-        </div>
-        <div class="button-wrapper">
-          <div class="button">杭州</div>
-        </div>
-        <div class="button-wrapper">
-          <div class="button"> 广东</div>
+        <div class="button-wrapper" v-for="item of hotCities" :key="item.id">
+          <div class="button">{{item.name}}</div>
         </div>
       </div>
 
     </div>
-    <div class="area">
-      <div class="title border-topbottom">A</div>
+    <div class="area" v-for="(item,key) of cities">
+      <div class="title border-topbottom" :key="key">{{key}}</div>
       <ul class="item-list">
-        <li class="item border-bottom">阿拉尔</li>
-        <li class="item border-bottom">阿拉尔</li>
-        <li class="item border-bottom ">阿拉尔</li>
-        <li class="item border-bottom">阿拉尔</li>
-        <li class="item border-bottom">阿拉尔</li>
+        <li class="item border-bottom" v-for="inneritem in item " :key="inneritem.id">{{inneritem.name}}</li>
       </ul>
     </div>
-    <div class="title border-topbottom">B</div>
-    <ul class="item-list">
-      <li class="item border-bottom">巴中</li>
-      <li class="item border-bottom">巴中</li>
-      <li class="item border-bottom ">巴中</li>
-      <li class="item border-bottom">巴中</li>
-      <li class="item border-bottom">巴中</li>
-      <li class="item border-bottom">巴中</li>
-      <li class="item border-bottom">巴中</li>
-    </ul>
-  </div>
+   
 </div>
 </div>
