--- a/src/views/city/city.html
+++ b/src/views/city/city.html
@@ -1,6 +1,6 @@
 <div >
   <header-bar></header-bar>
   <search-city></search-city>
-  <list-city></list-city>
-  <alphabet-city></alphabet-city>
+  <list-city :cities='cities' :hotCities='hotCities'></list-city>
+  <alphabet-city :cities='cities' ></alphabet-city>
 </div>
