--- a/src/components/city/alphabet/alphabet.html
+++ b/src/components/city/alphabet/alphabet.html
@@ -1,4 +1,4 @@
 <ul class="list">
-  <li class="item" v-for="(item,key) of cities">{{key}}</li>
+  <li class="item" v-for="item of letters" :ref="item" @click="handleLetterClick" @touchstart="handleTouchStart" @touchmove="handleTouchMove" @touchend="handleTouchEnd">{{item}}</li>
  
 </ul>
