--- a/src/components/city/search/search.styl
+++ b/src/components/city/search/search.styl
@@ -14,3 +14,17 @@
     color: $fontDescColor
     text-align: center
     border-radius: 6px
+.search-content
+  overflow hidden
+  position absolute
+  top 158px;
+  background: #fff
+  z-index: 1
+  right 0;
+  bottom: 0
+  width: 100%
+  .search-item
+    line-height: 62px
+    padding-left: 20px
+    color: #666666
+ 
