--- a/src/components/home/recommend/recommend.styl
+++ b/src/components/home/recommend/recommend.styl
@@ -17,6 +17,8 @@
        color: #333333
        padding-left: 3px;
    .recomend-list
+     .deatil
+        display: flex
      .recomend-item
        display flex
        padding-bottom: 20px
