--- a/src/components/home/recommend/recommend.html
+++ b/src/components/home/recommend/recommend.html
@@ -8,23 +8,27 @@
   </div>
   <div class="recomend-list">
     <div class="recomend-item border-bottom" v-for='item of recommendList' :key="item.id">
-      <div class="recomend-img">
-        <img class="recomend-img" :src="item.imgUrl" alt="" srcset="">
-      </div>
-      <div class="recomend-info">
-        <ul>
-          <li class="recomend-info-title">{{item.title}}</li>
-          <li class="recomend-info-desc">{{item.desc}}</li>
-          <li>
-           
+      <router-link  :to="{ name: 'detail', params: { id: item.id }}"  class="deatil">
+        <div class="recomend-img">
+          <img class="recomend-img" :src="item.imgUrl" alt="" srcset="">
+        </div>
+        <div class="recomend-info">
+          <ul>
+
+            <li class="recomend-info-title">{{item.title}}</li>
+            <li class="recomend-info-desc">{{item.desc}}</li>
+            <li>
+
               <em class="recomend-info-price-unt">￥</em>
               <span class="recomend-info-price">{{item.price}}</span>
               <em class="recomend-info-price-unts">起</em>
-            
-        
-          </li>
-        </ul>
-      </div>
+
+
+            </li>
+
+          </ul>
+        </div>
+      </router-link>
     </div>
 
   </div>
