--- a/src/components/common/gallary/gallary.html
+++ b/src/components/common/gallary/gallary.html
@@ -2,7 +2,7 @@
     <div class="wrapper">
       <swiper :options="swiperOption" >
         <!-- slides -->
-        <swiper-slide v-for='item of this.swiperList' :key="index"><img class="gallary-img" :src="item" alt=""></swiper-slide>
+        <swiper-slide v-for='(item,index) of this.swiperList' :key="index"><img class="gallary-img" :src="item" alt=""></swiper-slide>
          
         <!-- Optional controls -->
         <div class="swiper-pagination"  slot="pagination"></div>
