--- a/src/components/detail/handerBar/headerBar.html
+++ b/src/components/detail/handerBar/headerBar.html
@@ -1,7 +1,14 @@
 <div class="header-bar">
-    <div class="header-back" @click='back'>
+    <div class="header-abs" v-if='!showAbs'>
         <i class="iconfont icon-back"></i>
     </div>
-    <div class="header-title"><span class="placeholder">详情</span></div>
-    <div class="header-city" ></div>
+    <div class="header-fixd" v-if='showAbs'>
+        <div class="header-back" @click='back'>
+            <i class="iconfont icon-back"></i>
+        </div>
+        <div class="header-title">
+            <span class="placeholder">景点详情</span>
+        </div>
+        <div class="header-city"></div>
+    </div>
 </div>
