--- a/src/components/detail/handerBar/headerBar.styl
+++ b/src/components/detail/handerBar/headerBar.styl
@@ -1,10 +1,8 @@
 @import '../../../styles/varibles.styl'
 .header-bar
-  height $navBarHeight
   display: flex
   background:$bgColor
   color: $white;
-  line-height: $navBarHeight
   .header-back
     width: 64px
     float:left
@@ -24,5 +22,51 @@
     width: 124px
     float right
     text-align: center
+  .header-abs 
+    position absolute
+    left 20px
+    top 20px
+    width 60px
+    height 60px
+    border-radius: 30px
+    text-align: center;
+    color: #ffffff;
+    background: rgba(0,0,0,1)
+    line-height: 60px;
+  .header-fixd
+    background:$bgColor
+    color: $white
+    height 80px
+    position fixed
+    width: 100%
+    line-height: 80px
+    .header-back
+      width: 64px
+      float:left
+      padding-left:10px
+    .icon-back:before
+        font-size: 30px
+      .header-title
+        flex: 1
+        border-radius: 5px
+        margin-top: 12px
+        padding-left: 20px
+        height 64px
+        color: $white
+        line-height: 64px
+        text-align: center
+     .header-city
+        width: 124px
+        float right
+        text-align: center
+
+          
+
+    
+    
+ 
+
+      
+     
  
 
