--- a/src/views/detail/detail.html
+++ b/src/views/detail/detail.html
@@ -4,5 +4,9 @@
      <img src="http://img1.qunarzz.com/sight/p0/1409/19/adca619faaab0898245dc4ec482b5722.jpg_600x330_f922b488.jpg" alt="" class="detail-pic">
   </div>
   <gallary :swiperList='swiperList' :showgallary='isShowGallary' @close='handleClose'></gallary>
-  <div class="content"></div>
+  <div class="content">
+    <detail-list :list='list'></detail-list>
+  </div>
+
+ 
 </div>
