--- a/src/components/detail/handerBar/headerBar.html
+++ b/src/components/detail/handerBar/headerBar.html
@@ -1,5 +1,5 @@
 <div class="header-bar">
-    <div class="header-abs" v-if='!showAbs'>
+    <div class="header-abs" v-if='!showAbs' @click='handleIndex'>
         <i class="iconfont icon-back"></i>
     </div>
     <div class="header-fixd" v-if='showAbs'>
